# Plaxel-Side-Scroller

./: .clang-format  .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  main.cpp  renderdoc.cap  settings.json  shaderCompiling-CMakeLists.txt  sonar-project.properties  vcpkg.json  vk_layer_settings.txt
.github/workflows/: build.yml  publish.yml
shaders/: add_block.comp  common.hlsli  cursorBlock.frag  cursorBlock.mesh  shader.comp  shader.frag  worldBlock.vert  worldRenderer.comp
src/: plaxel.cpp  plaxel.h  version.h.in
src/renderer/: Buffer.cpp  Buffer.h  UIOverlay.cpp  UIOverlay.h  base_renderer.cpp  base_renderer.h  camera.cpp  camera.h  file_utils.cpp  file_utils.h  renderer.cpp  renderer.h  vulkan_dispatch_loader.cpp  vulkan_dispatch_loader.h
test/: plaxel.cpp  test_utils.cpp  test_utils.h
test/renderer/: TestRenderer.cpp  TestRenderer.h  renderer.cpp  rendererBenchmark.cpp  simple_drawing_test.ppm
